syntax = "proto3";

package inventory;

option go_package = "/inventorypb";

message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;
  int32 stock = 4;
  int32 category_id = 5;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  int32 id = 1;
}

message GetProductRequest {
  int32 id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  string name = 1;
  int32 category = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message UpdateProductRequest {
  Product product = 1;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  int32 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

service InventoryService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}
